@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2023-09-06T08:07:09Z",
+  "timestamp" : "2023-09-07T16:01:56Z",
   "count_outdated" : 271,
   "uniques_outdated" : 87,
-  "count" : 274,
-  "uniques" : 88,
+  "count" : 275,
+  "uniques" : 89,
   "views" : [
     {
       "timestamp": "2023-09-01T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
