@@ -1,10 +1,15 @@
 {
-  "count": 3,
-  "uniques": 1,
+  "count": 4,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2023-09-01T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-07T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
